--- a/i18n/es_MX.po
+++ b/i18n/es_MX.po
@@ -6,21 +6,32 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Odoo Server 10.0\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2017-06-20 22:56+0000\n"
-"PO-Revision-Date: 2017-06-20 17:35-0700\n"
+"POT-Creation-Date: 2017-07-04 01:17+0000\n"
+"PO-Revision-Date: 2017-07-03 18:20-0700\n"
 "Last-Translator: <>\n"
 "Language-Team: \n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: \n"
-"Language: es_MX\n"
+"Language: es\n"
 "X-Generator: Poedit 1.8.7.1\n"
 
 #. module: warehouse_req-extended
 #: model:ir.actions.act_window,help:warehouse_req-extended.warehouse_req_list_action2
 msgid "Click here to add new documento"
 msgstr "Click aqui para agregar un nuevo documento"
+
+#. module: warehouse_req-extended
+#: model:ir.ui.view,arch_db:warehouse_req-extended.warehouse_req_form_view-ext
+#: model:ir.ui.view,arch_db:warehouse_req-extended.warehouse_req_tree_view-ext
+msgid "Is Manufactured"
+msgstr "Es fabricado"
+
+#. module: warehouse_req-extended
+#: model:ir.model.fields,field_description:warehouse_req-extended.field_warehouse_req_is_manufactured
+msgid "Is manufactured"
+msgstr "Es fabricado"
 
 #. module: warehouse_req-extended
 #: code:addons/warehouse_req-extended/models/warehouse_req_ext.py:10
@@ -46,14 +57,12 @@ msgstr "Req. Tipo Producto"
 
 #. module: warehouse_req-extended
 #: code:addons/warehouse_req-extended/models/warehouse_req_ext.py:15
-#: model:ir.model.fields,help:warehouse_req-extended.field_warehouse_req_product_type_req
 #, python-format
 msgid "Products types to require"
 msgstr "Tipos de productos a requerir"
 
 #. module: warehouse_req-extended
 #: code:addons/warehouse_req-extended/models/warehouse_req_ext.py:11
-#: selection:warehouse.req,product_type_req:0
 #, python-format
 msgid "Repaired"
 msgstr "Reparado"
@@ -63,6 +72,16 @@ msgstr "Reparado"
 #: model:ir.ui.menu,name:warehouse_req-extended.warehouse_req_menu2
 msgid "Repaired Products"
 msgstr "Productos Reparados"
+
+#. module: warehouse_req-extended
+#: selection:warehouse.req,product_type_req:0
+msgid "Reparado"
+msgstr "Reparado"
+
+#. module: warehouse_req-extended
+#: model:ir.model.fields,help:warehouse_req-extended.field_warehouse_req_product_type_req
+msgid "Tipos de productos a requerir"
+msgstr "Tipos de productos a requerir"
 
 #. module: warehouse_req-extended
 #: model:ir.model,name:warehouse_req-extended.model_warehouse_req
